QtXml: fix leak in QDomText::splitText

QDomText::splitText() needs to unref() the newly created QDomText
instance as it does not use it by itself

On picking to 6.5, the new forward-declaration collided with
feature-check #if-ery that's since been removed. Retain both.

Pick-to: 6.2 5.15
Fixes: QTBUG-40561
Change-Id: I593011b63c39f2310204d97ec61da7cf78a0fc14
Reviewed-by: Giuseppe D'Angelo <giuseppe.dangelo@kdab.com>
(cherry picked from commit de0230467c1f658232b101a99e62d68992173592)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 975fc3da70ee83410876a205a2ebfbf25dd27e30)
(cherry picked from commit 4efc8dd8d026d7b31d0e5411d687d28a22fb6671)
Reviewed-by: Marc Mutz <marc.mutz@qt.io>